--- a/style.css
+++ b/style.css
@@ -207,7 +207,7 @@ body {
   line-height: 1.5;
   margin-bottom: 15px;
   letter-spacing: 1px;
-  color: var(--grey);
+  color: var(--dark-light);
 }
 
 .about__list {
@@ -226,7 +226,7 @@ body {
 }
 
 .about__item-color {
-  color: var(--grey);
+  color: var(--dark-light);
   font-weight: 500;
 }
 
@@ -312,4 +312,17 @@ body {
   padding: 10px;
   border: 1px solid var(--primary);
   display: block;
+}
+
+.education {}
+.education__content {}
+.education__list {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+.education__item {
+  color: var(--dark-light);
+  letter-spacing: 1.5px;
+  margin: 5px 0;
 }
