feat: add color for porfolio description

--- a/style.css
+++ b/style.css
@@ -349,20 +349,17 @@ body {
   margin: 0;
   margin-bottom: 10px;
 }
-.portfolio__item {
-
-}
 
 .portfolio__text-block {
   color: var(--dark-light);
   letter-spacing: 1.3px;
   margin: 5px 0;
 }
-.portfolio__description {}
 
 .portfolio__subtitle {
   margin-top: 10px;
   font-size: 10px;
+  color: var(--primary);
 }
 
 .portfolio__name {
