feat: add burger menu

--- a/style.css
+++ b/style.css
@@ -327,6 +327,63 @@ body {
   color: var(--primary-hov);
 }
 
+.burger {
+  display: none;
+  width: 50px;
+  height: 25px;
+  position: fixed;
+  top: 25px;
+  left: 25px;
+  background: rgba(43, 39, 39, .8);
+  padding: 5px;
+}
+
+.burger__line {
+  width: 100%;
+  height: 3px;
+  position: absolute;
+  background: var(--primary);
+  transition: .3s ease-in-out;
+}
+
+.burger__line:nth-child(1) {
+  top: 0;
+  left: 0;
+}
+
+.burger__line:nth-child(2) {
+  top: 50%;
+  left: 0;
+  transform: translateY(-50%);
+}
+
+.burger__line:nth-child(3) {
+  bottom: 0;
+  left: 0;
+}
+
+.burger__line:hover {
+  background: var(--primary-hov);
+}
+
+.active .burger__line:nth-child(2) {
+  width: 0;
+  height: 0;
+}
+
+.active .burger__line:nth-child(1) {
+  transform: rotate( 45deg);
+  top: 85%;
+}
+
+.active .burger__line:nth-child(3) {
+  transform: rotate( -45deg)
+}
+
+.active .menu__list {
+  display: block;
+}
+
 .education__list {
   padding: 0;
   margin: 0;
@@ -499,8 +556,18 @@ body {
     justify-content: center;
   }
 
-  .menu {
+  .menu__list {
     display: none;
+  }
+
+  .burger {
+    display: block;
+  }
+
+  .active .menu__list {
+    height: 50vh;
+    display: grid;
+    padding: 50px;
   }
 }
 
